# project1_Bogdanov_Artem_M25-555

./: .gitignore  Makefile  README.MD  gameplay.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
