[project]
name = "project1-bogdanov-artem-m25-555"
version = "0.1.0"
description = "Homework 1 Python"
authors = [
    {name = "Богданов Артём",email = "bogdartem1997@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"